SD-026 受注管理レポート 20241117

--- a/sd-s4apps01/zsalesdocumentlist/webapp/view/Main.view.xml
+++ b/sd-s4apps01/zsalesdocumentlist/webapp/view/Main.view.xml
@@ -121,8 +121,8 @@
                                 <smartFilterBar:ControlConfiguration index='999' key="NoComplDeliveredQtyInBaseUnit" visible="false"/>
                                 <smartFilterBar:ControlConfiguration index='999' key="InternalTansferQtyInBaseUnit" visible="false"/>
                                 <smartFilterBar:ControlConfiguration index='999' key="NoInternalTansferQtyInBaseUnit" visible="false"/>
-                                <smartFilterBar:ControlConfiguration index='999' key="EnternalTansferQtyInBaseUnit" visible="false"/>
-                                <smartFilterBar:ControlConfiguration index='999' key="NoEnternalTansferQtyInBaseUnit" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="ExternalTansferQtyInBaseUnit" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="NoExternalTansferQtyInBaseUnit" visible="false"/>
                                 <smartFilterBar:ControlConfiguration index='999' key="BillingQuantityInBaseUnit" visible="false"/>
                                 <smartFilterBar:ControlConfiguration index='999' key="NoBillingQuantityInBaseUnit" visible="false"/>
                                 <smartFilterBar:ControlConfiguration index='999' key="CreationDate" visible="false"/>
@@ -131,6 +131,9 @@
                                 <smartFilterBar:ControlConfiguration index='999' key="SalesDocumentRjcnReason" visible="false"/>
                                 <smartFilterBar:ControlConfiguration index='999' key="SalesDocumentRjcnReasonName" visible="false"/>
                                 <smartFilterBar:ControlConfiguration index='999' key="YY1_ManagementNo_SDI" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="YY1_ManagementNo_1_SDI" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="YY1_ManagementNo_2_SDI" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="YY1_ManagementNo_3_SDI" visible="false"/>
                                 <smartFilterBar:ControlConfiguration index='999' key="ConditionCurrency" visible="false"/>
                                 <smartFilterBar:ControlConfiguration index='999' key="BillingQuantityUnit" visible="false"/>
                             </smartFilterBar:controlConfiguration>
