--- a/pp-s4apps01/productionplan/webapp/view/Main.view.xml
+++ b/pp-s4apps01/productionplan/webapp/view/Main.view.xml
@@ -54,7 +54,7 @@
             <Button id="web6" icon="sap-icon://internet-browser" text="{i18n>web6ButtonText}" tooltip="{i18n>web6ButtonText}" press="onWeb6"/>  
         </OverflowToolbar>
 			</smartTable:customToolbar>
-            <t:Table id="ReportTable" selectionMode="MultiToggle" rowsUpdated="onUITableRowsUpdated" visibleRowCount="12">
+            <t:Table id="ReportTable" selectionMode="MultiToggle" rowsUpdated="onUITableRowsUpdated" >
                 <t:Column id="Plant" label="{i18n>Plant}" width="4rem" sortProperty="Plant" filterProperty="Plant" visible="true" autoResizable="true">
                     <t:customData>
                         <core:CustomData key="p13nData" value='\{"columnKey":"Plant", "leadingProperty":"Plant", "sortProperty":"Plant", "filterProperty": "Plant"}'/>
@@ -229,7 +229,7 @@
                     </t:customData>
                     <t:template>
                       <VBox id="VBox001">
-                        <Text id="D001T" text="{D001}" visible="{parts:['PlanType'], formatter:'.formatter.setTextVisible'}"/>
+                        <Text id="D001T" text="{D001}" visible="{parts:['PlanType'], formatter:'.formatter.setTextVisible'}" />
                         <Input id="D001I" value="{D001}" visible="{parts:['PlanType'], formatter:'.formatter.setInputVisible'}" editable="false" change="onInputChange($event,'D001')"/>
                       </VBox>
                     </t:template>
