--- a/bi-s4apps01/recoverymanagement/webapp/view/MainView.view.xml
+++ b/bi-s4apps01/recoverymanagement/webapp/view/MainView.view.xml
@@ -1,4 +1,4 @@
-<mvc:View controllerName="recoverymanagement.controller.MainView"
+<mvc:View controllerName="bi.recoverymanagement.controller.MainView"
     xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
     xmlns="sap.m">
     <Page id="page" showHeader="false" title="{i18n>title}">
@@ -6,19 +6,19 @@
             <IconTabBar id="idIconTabBar" expandable="true" expanded="{device>/isNoPhone}" class="sapUiNoContentPadding" applyContentPadding="false" stretchContentHeight="true">
                 <items>
                     <IconTabFilter id="idTabFilter1" text="{i18n>title1}" key="title1">
-                        <mvc:XMLView id="idMasterView" viewName="recoverymanagement.view.MasterMaintain" />
+                        <mvc:XMLView id="idMasterView" viewName="bi.recoverymanagement.view.MasterMaintain" />
                     </IconTabFilter>
                     <IconTabFilter id="idTabFilter2" text="{i18n>title2}" key="title2">
-                        <mvc:XMLView id="idReport02View" viewName="recoverymanagement.view.Report002" />
+                        <mvc:XMLView id="idReport02View" viewName="bi.recoverymanagement.view.Report002" />
                     </IconTabFilter>
                     <IconTabFilter id="idTabFilter3" text="{i18n>title3}" key="title3">
-                        <mvc:XMLView id="idReport03View" viewName="recoverymanagement.view.Report003" />
+                        <mvc:XMLView id="idReport03View" viewName="bi.recoverymanagement.view.Report003" />
                     </IconTabFilter>
                     <IconTabFilter id="idTabFilter4" text="{i18n>title4}" key="title4">
-                        <mvc:XMLView id="idReport04View" viewName="recoverymanagement.view.Report004" />
+                        <mvc:XMLView id="idReport04View" viewName="bi.recoverymanagement.view.Report004" />
                     </IconTabFilter>
                     <IconTabFilter id="idTabFilter5" text="{i18n>title5}" key="title5">
-                        <mvc:XMLView id="idReport05View" viewName="recoverymanagement.view.Report005" />
+                        <mvc:XMLView id="idReport05View" viewName="bi.recoverymanagement.view.Report005" />
                     </IconTabFilter>
                 </items>
             </IconTabBar>
