--- a/bi-s4apps01/recoverymanagement/webapp/view/Report005.view.xml
+++ b/bi-s4apps01/recoverymanagement/webapp/view/Report005.view.xml
@@ -1,4 +1,4 @@
-<mvc:View xmlns:rowmodes="sap.ui.table.rowmodes" xmlns:smartfilterbar="sap.ui.comp.smartfilterbar" controllerName="recoverymanagement.controller.Report005"
+<mvc:View xmlns:rowmodes="sap.ui.table.rowmodes" xmlns:smartfilterbar="sap.ui.comp.smartfilterbar" controllerName="bi.recoverymanagement.controller.Report005"
     xmlns:mvc="sap.ui.core.mvc"
     xmlns="sap.m"
     xmlns:smarttable="sap.ui.comp.smarttable"
