MM-020 add namespace

--- a/mm-s4apps01/poposting/webapp/view/Main.view.xml
+++ b/mm-s4apps01/poposting/webapp/view/Main.view.xml
@@ -1,4 +1,4 @@
-<mvc:View controllerName="poposting.controller.Main"
+<mvc:View controllerName="mm.poposting.controller.Main"
     xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
     xmlns="sap.m"
     xmlns:unified="sap.ui.unified"
