--- a/mm-s4apps01/poposting/webapp/view/App.view.xml
+++ b/mm-s4apps01/poposting/webapp/view/App.view.xml
@@ -1,4 +1,4 @@
-<mvc:View controllerName="poposting.controller.App"
+<mvc:View controllerName="mm.poposting.controller.App"
     xmlns:html="http://www.w3.org/1999/xhtml"
     xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
     xmlns="sap.m">
